@@ -54,7 +54,7 @@ class TestWorkbench ( Workbench ):
 				list = ["Std_Test1", "Std_Test2", "Std_Test3", "Std_Test4", "Std_Test5", "Std_Test6", "Std_Test7", "Std_Test8"]
 				w.AppendMenu("Test &Commands",list)
 
-				list = ["Std_ViewExample1", "Std_ViewExample2", "Std_ViewExample3", "Std_ViewIvDecorationOn", "Std_ViewIvDecorationOff", 
+				list = ["Std_ViewExample1", "Std_ViewExample2", "Std_ViewExample3", 
 				"Separator", "Std_ViewIvStereoRedGreen", "Std_ViewIvStereoQuadBuff", "Std_ViewIvStereoInterleavedRows", 
 				"Std_ViewIvStereoInterleavedColumns", "Std_ViewIvStereoOff", "Std_ViewIvIssueCamPos"]
 				w.AppendMenu("Inventor View",list)
